--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -1,6 +1,25 @@
 .header{
-    background-color:  #374785;
-    margin-top: 0;
-    color: wheat;
-
+    background-color: #374785;
+    color: white;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(2,50%);
+    height: 100px;
 }
+
+
+.navSide{
+    display: grid;
+    grid-template-rows: 55px auto;
+    justify-items: end;
+    align-items: start;
+}
+
+.nav{
+    margin-right: 20px;
+   
+}
+.nav-icon{
+    font-size: 50px;
+}
+
