--- a/src/Component/Register/Register.css
+++ b/src/Component/Register/Register.css
@@ -1,36 +1,60 @@
+.form-container{
+    display: grid;
+    grid-template-columns: 50% auto;
+    margin:10% 22% 10% 22% ;
+    border: 1px solid black;
+}
 .form{
-    margin: 100px;
-    padding: 40px;
+    
     display: inline-block;
     border: 1px solid black;
-
+    padding: 40px;
 }
 body {
     text-align: center;
+    
 }
-
+.fullNameContainer{
+    display: grid;
+    grid-template-columns: 50% auto;
+}
+.passwordContainer{
+    display: grid;
+    grid-template-columns: 50% auto;
+}
 .input-field{
-    border: 0px;
+    border: 0;
     border-bottom: 2px solid gray;
     color: black;
     display: block;
     padding: 10px;
-    margin: 10px;
+    width: 85%;
+    margin: 5px;
     font-size: 15px;
 }
 .input-field:focus{
     outline: none;
 }
-.orangeBtn{
-    background-color:#19103F;
+.createBtn{
+    background-color:#27186b;
     color: white;
+    font-weight: bold;
     padding: 5px;
     border-radius: 5px;
-    width: 80%;
-    margin-bottom: 5px;
+    width: 60%;
+    margin: 15px;
+    height: 45px;
 }
-.orangeBtn:hover{
-    background-color: #2F216A;
+.createBtn:hover{
+    background-color: #4620f1;
+}
+.form-design{
+    background-color: #27186b;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
 }
 .stateChangebtn{
     background-color: white;
