--- a/src/Component/Login/Login.css
+++ b/src/Component/Login/Login.css
@@ -1,16 +1,21 @@
 .form{
     display: inline-block;
+    
 }
-.input-field{
+.form-login{
+    display: inline-block;
+    margin-top: 35%;
+}
+.login-input-field{
     border: 0px;
-    border-bottom: 2px solid gray;
+    border-radius: 5px;
     color: black;
     display: block;
     padding: 10px;
     margin: 10px;
     font-size: 15px;
 }
-.input-field:focus{
+.login-input-field:focus{
     border: 1px solid black;
     outline: none;
 }
@@ -19,7 +24,7 @@
     background-color:rgb(50, 65, 50);
     color: whitesmoke;
     padding: 5px;
-    height: 60px;
+    height: 50px;
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 5px;
