--- a/src/Component/AddProblem/AddProblem.css
+++ b/src/Component/AddProblem/AddProblem.css
@@ -1,7 +1,4 @@
-.addProblem-container{
-    display: grid;
-    grid-template-columns: 20% auto 20%;
-}
+
 .addProblem-form{
     border: 1px solid black;
     margin: 20px;
@@ -22,19 +19,18 @@
     border: 0;
 }
 
-#title{
+#title,#answer{
     margin: 10px;
     height: 40px;
     font-size: 20px;
 }
 
-#area{
+#description{
     margin: 10px;
     padding: 10px;
 }
-#img{
+#tag-select{
     margin: 10px;
-    
 }
 .problemBtn{
     background-color:#27186b;
