--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -4,7 +4,7 @@
     left:0;
     bottom:0;
     right:0;
-    background-color: #566fd1;
+    background-color: #27186b;
     color: white;
     padding: 10px;
     padding-bottom: 10px;
