--- a/src/Component/ProblemStatement/Statement.css
+++ b/src/Component/ProblemStatement/Statement.css
@@ -1,6 +1,12 @@
 .statement-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
     margin: 5%;
-    border: 1px solid black;
     text-align: left;
     padding: 20px;
+    min-height: 600px;
+}
+.statement-que{
+    border: 1px solid black;
+    padding: 10px;
 }
