--- a/src/Component/Profile/Profile.css
+++ b/src/Component/Profile/Profile.css
@@ -1,19 +1,16 @@
 .profile-container{
     display: grid;
-    grid-template-columns: 20% auto 20%;
-    margin: 15px;
-    
-    height: 510px;
-    
+    grid-template-columns: 15% auto 15%;
+    margin: 15px;  
+    min-height: 650px;  
 }
 .profile-left{
     
 }
 .profile-right{
-    background-color: rgb(226, 231, 235);
+    background-color: rgb(216, 236, 252);
     border: 0;
     border-radius: 5px;
-    box-shadow: 2px 2px 10px black;
 }
 .profile-right-header{
     border: 1px solid black;
@@ -27,4 +24,12 @@
     margin-left: 10px;
     text-align: left;
     padding: 10px;
+}
+.profile-photo{
+    margin: 15px;
+}
+img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 50%;
 }
