--- a/src/Component/Profile/Profile.css
+++ b/src/Component/Profile/Profile.css
@@ -20,6 +20,13 @@
     display: grid;
     grid-template-columns: 50% auto ;
 }
+.popUp-profile-container{
+    
+    filter: blur(10px);
+    user-select: none;
+    pointer-events:none;
+    z-index: 1;
+}
 .inside-profile-info{
     margin-left: 10px;
     text-align: left;
@@ -27,9 +34,10 @@
 }
 .profile-photo{
     margin: 15px;
+    padding-right: 20px;
 }
 img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 75%;
+    max-height: 80%;
     border-radius: 50%;
 }
